syntax = "proto3";
option java_multiple_files = true;
option csharp_namespace = "GrpcService.Protos";

package dk.via.sep3;

// ========================
// Shared DTOs
// ========================

message DTOGenre {
  string name = 2;
}

message DTOBook {
  int32 id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  string state = 5;
  repeated DTOGenre genres = 6;
}

message DTOLoan {
  int32 id = 1;
  string borrowDate = 2;
  string dueDate = 3;
  string username = 4;
  bool isReturned = 5;
  int32 bookId = 6;
  int32 numberOfExtensions = 7;
}

message DTOUser {
  string username = 1;
  string name = 2;
  string password = 3;
  string role = 4;
  string email = 5;
  string phoneNumber = 6;
}

message DTOReservation {
  int32 id = 1;
  string reservationDate = 2;
  string username = 3;
  int32 bookId = 4;
}

// ========================
// Book Service Messages
// ========================

message GetAllBooksRequest {
}

message GetAllBooksResponse {
  repeated DTOBook books = 1;
  bool success = 2;
  string message = 3;
}

message GetBooksByIsbnRequest {
  string isbn = 1;
}

message GetBooksByIsbnResponse {
  repeated DTOBook books = 1;
  bool success = 2;
  string message = 3;
}

message GetBookByIdRequest {
  int32 id = 1;
}

message GetBookByIdResponse {
  DTOBook book = 1;
  bool success = 2;
  string message = 3;
}

message UpdateBookStateRequest {
  int32 id = 1;
  string state = 2;
}

message UpdateBookStateResponse {
  DTOBook book = 1;
  bool success = 2;
  string message = 3;
}

// ========================
// Loan Service Messages
// ========================

message CreateLoanRequest {
  string borrowDate = 1;
  string dueDate = 2;
  string username = 3;
  int32 bookId = 4;
}


message CreateLoanResponse {
  DTOLoan loan = 1;
  bool success = 2;
  string message = 3;
}

message GetLoanByIdRequest
{
  int32 id = 1;
}

message GetLoanByIdResponse
{
  DTOLoan loan = 1;
  bool success = 2;
  string message = 3;
}

// ========================
// Reservation Service Messages
// ========================

message CreateReservationRequest {
  string reservationDate = 1;
  string username = 2;
  int32 bookId = 3;
}

message CreateReservationResponse {
  DTOReservation reservation = 1;
  bool success = 2;
  string message = 3;
}

message GetReservationCountByIsbnRequest {
  string isbn = 1;
}

message GetReservationCountByIsbnResponse {
  int32 numberOfReservations = 1;
  bool success = 2;
  string message = 3;
}

// ========================
// Extension Service Messages
// ========================

message ExtendLoanRequest {
  DTOLoan loanId = 1;
}

message ExtendLoanResponse {
  DTOLoan loan = 1;
  bool success = 2;
  string message = 3;
}


// ========================
// User Service Messages
// ========================

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  DTOUser user = 1;
  bool success = 2;
  string message = 3;
}

message GetLoansByISBNRequest {
  string isbn = 1;
}

message GetLoansByISBNResponse {
  repeated DTOLoan loans = 1;
  bool success = 2;
  string message = 3;
}

// ========================
// Services
// ========================

service BookService {
  rpc GetAllBooks (GetAllBooksRequest) returns (GetAllBooksResponse);
  rpc GetBooksByIsbn (GetBooksByIsbnRequest) returns (GetBooksByIsbnResponse);
  rpc GetBookById (GetBookByIdRequest) returns (GetBookByIdResponse);
  rpc UpdateBookState (UpdateBookStateRequest) returns (UpdateBookStateResponse);
}

service LoanService {
  rpc CreateLoan (CreateLoanRequest) returns (CreateLoanResponse);
  rpc GetLoansByISBN (GetLoansByISBNRequest) returns (GetLoansByISBNResponse);
  rpc ExtendLoan (ExtendLoanRequest) returns (ExtendLoanResponse);
  rpc GetLoanById (GetLoanByIdRequest) returns (GetLoanByIdResponse);
}

service UserService {
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
}

service ReservationService {
  rpc CreateReservation (CreateReservationRequest) returns (CreateReservationResponse);
  rpc GetReservationCountByIsbn (GetReservationCountByIsbnRequest) returns (GetReservationCountByIsbnResponse);
}